# algorithm-project

./: .gitignore  Array.h  CMakeLists.txt  README.md  SinglyLinkedList.h  badanie_alfa.ps1
Wyniki_Koncowe/Badanie_B/: wyniki_B.csv
include/: Application.h  Array.h  ArraySort.h  BinaryTree.h  DataGenerator.h  DoublyLinkedList.h  DoublyLinkedListSort.h  FileReader.h  FileWriter.h  Runner.h  SinglyLinkedList.h  SinglyLinkedListSort.h  Stack.h  Types.h
lib/: Parameters.cpp  Parameters.h
src/: FileReader.cpp  main.cpp
